--- a/sections/rich-text-left.liquid
+++ b/sections/rich-text-left.liquid
@@ -43,7 +43,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.rich-text.name",
+  "name": "t:sections.rich-text-left.name",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -79,7 +79,7 @@
       "type": "checkbox",
       "id": "full_width",
       "default": true,
-      "label": "t:sections.rich-text.settings.full_width.label"
+      "label": "t:sections.rich-text-left.settings.full_width.label"
     },
     {
       "type": "header",
@@ -109,14 +109,14 @@
   "blocks": [
     {
       "type": "heading",
-      "name": "t:sections.rich-text.blocks.heading.name",
+      "name": "t:sections.rich-text-left.blocks.heading.name",
       "limit": 1,
       "settings": [
         {
           "type": "text",
           "id": "heading",
           "default": "Talk about your brand",
-          "label": "t:sections.rich-text.blocks.heading.settings.heading.label"
+          "label": "t:sections.rich-text-left.blocks.heading.settings.heading.label"
         },
         {
           "type": "select",
@@ -142,45 +142,45 @@
     },
     {
       "type": "text",
-      "name": "t:sections.rich-text.blocks.text.name",
+      "name": "t:sections.rich-text-left.blocks.text.name",
       "limit": 1,
       "settings": [
         {
           "type": "richtext",
           "id": "text",
           "default": "<p>Share information about your brand with your customers. Describe a product, make announcements, or welcome customers to your store.</p>",
-          "label": "t:sections.rich-text.blocks.text.settings.text.label"
+          "label": "t:sections.rich-text-left.blocks.text.settings.text.label"
         }
       ]
     },
     {
       "type": "button",
-      "name": "t:sections.rich-text.blocks.button.name",
+      "name": "t:sections.rich-text-left.blocks.button.name",
       "limit": 1,
       "settings": [
         {
           "type": "text",
           "id": "button_label",
           "default": "Button label",
-          "label": "t:sections.rich-text.blocks.button.settings.button_label.label"
+          "label": "t:sections.rich-text-left.blocks.button.settings.button_label.label"
         },
         {
           "type": "url",
           "id": "button_link",
-          "label": "t:sections.rich-text.blocks.button.settings.button_link.label"
+          "label": "t:sections.rich-text-left.blocks.button.settings.button_link.label"
         },
         {
           "type": "checkbox",
           "id": "button_style_secondary",
           "default": false,
-          "label": "t:sections.rich-text.blocks.button.settings.button_style_secondary.label"
+          "label": "t:sections.rich-text-left.blocks.button.settings.button_style_secondary.label"
         }
       ]
     }
   ],
   "presets": [
     {
-      "name": "t:sections.rich-text.presets.name",
+      "name": "t:sections.rich-text-left.presets.name",
       "blocks": [
         {
           "type": "heading"
