added preset to rich-text-left

--- a/sections/rich-text-left.liquid
+++ b/sections/rich-text-left.liquid
@@ -180,7 +180,7 @@
   ],
   "presets": [
     {
-      "name": "t:sections.rich-text-left.presets.name",
+      "name": "rich-text-left",
       "blocks": [
         {
           "type": "heading"
