--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -46,10 +46,12 @@
 
 .collection__description > * {
   margin: 0;
+  text-align: center;
 }
 
 .collection__title.title-wrapper {
   margin-bottom: 2.5rem;
+  text-align: center;
 }
 
 .collection__title .title:not(:only-child) {
