--- a/assets/base.css
+++ b/assets/base.css
@@ -2256,7 +2256,7 @@ input[type="checkbox"] {
 
   .header--middle-left {
     grid-template-areas: "heading navigation icons";
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: 2fr 4fr 1fr;
     column-gap: 2rem;
   }
 
@@ -2599,6 +2599,7 @@ details[open] > .header__submenu {
 
   .header--middle-left .header__inline-menu {
     margin-left: 0;
+    text-align: right;
   }
 }
 
