--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -42,12 +42,20 @@
   .collection .slider--tablet.product-grid {
     scroll-padding-left: 1.5rem;
   }
+  .collection__description .body {
+    max-width: 100%;
+  }
 }
 
 .collection__description > * {
   margin: 0;
   text-align: center;
   max-width: 1140px;
+}
+
+.collection__description .body {
+  max-width: 70%;
+  margin: auto;
 }
 
 .collection__title.title-wrapper {
