--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -122,7 +122,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-end;
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
 }
 
 .footer-block--newsletter:only-child {
