--- a/assets/base.css
+++ b/assets/base.css
@@ -1030,7 +1030,7 @@ summary::-webkit-details-marker {
 }
 
 .grid--2-col .grid__item {
-  width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
+  /* width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2); */
 }
 
 @media screen and (min-width: 750px) {
