--- a/assets/base.css
+++ b/assets/base.css
@@ -2156,11 +2156,13 @@ input[type="checkbox"] {
 /* section-announcement-bar */
 #shopify-section-announcement-bar {
   z-index: 4;
+  height: 6rem;
 }
 
 .announcement-bar {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
   color: rgb(var(--color-foreground));
+  height: 100%;
 }
 
 .announcement-bar__link {
@@ -2189,9 +2191,10 @@ input[type="checkbox"] {
 
 .announcement-bar__message {
   text-align: center;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   margin: 0;
   letter-spacing: 0.1rem;
+  font-size: 1.6rem;
 }
 
 /* section-header */
