--- a/assets/base.css
+++ b/assets/base.css
@@ -2197,6 +2197,12 @@ input[type="checkbox"] {
   font-size: 1.6rem;
 }
 
+@media only screen and (min-width: 750px) {
+  .announcement-bar__message {
+    font-size: calc(var(--font-heading-scale) * 1.3rem);
+  }
+}
+
 /* section-header */
 #shopify-section-header {
   z-index: 3;
