--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -2,7 +2,7 @@
   <h2>{{ section.settings.text-box }}</h2>
 
   <a href="{{ section.settings.link }}">
-    {{ section.settings.linktext }}
+    {{ section.settings.linkImage }}
   </a>
 </div>
 
@@ -22,10 +22,9 @@
       "label": "Link URL"
     },
     {
-      "id": "linktext",
-      "type": "text",
-      "label": "Link text",
-      "default": "Click here"
+      "id": "linkImage",
+      "type": "image_picker",
+      "label": "Button icon",
     }
   ]
   ,
