conflicting json property in CTA btn

--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -22,9 +22,9 @@
       "label": "Link URL"
     },
     {
-      "id": "linkImage",
       "type": "image_picker",
-      "label": "Button icon",
+      "id": "image",
+      "label": "image"
     }
   ]
   ,
