--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -2,7 +2,7 @@
   <h2>{{ section.settings.text-box }}</h2>
 
   <a href="{{ section.settings.link }}">
-    {{ section.settings.image }}
+  <img src = "{{ section.settings.image }}">
   </a>
 </div>
 
