--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -1,10 +1,11 @@
-<div>
+<div class="sticky-call-to-action">
   <h2>{{ section.settings.text-box }}</h2>
 
   <a href="{{ section.settings.link }}">
   <img src = "{{ section.settings.image | img_url:'master' }}">
   </a>
 </div>
+
 
 {% schema %}
 {
