--- a/assets/base.css
+++ b/assets/base.css
@@ -2242,6 +2242,7 @@ input[type="checkbox"] {
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   padding-top: 1rem;
+  height: 10rem;
   padding-bottom: 1rem;
 }
 
