floating cta button goes to left on mobile devices

--- a/assets/base.css
+++ b/assets/base.css
@@ -2932,6 +2932,12 @@ details-disclosure > details {
   z-index: 100;
 }
 
+@media screen and (max-width: 750px) {
+  .sticky-call-to-action {
+    left: 40px;
+  }
+}
+
 .sticky-call-to-action img {
   height: 7rem;
 }
