added title class to cta button heading

--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -2,7 +2,7 @@
 
   <a href="{{ section.settings.link }}">
   <img src = "{{ section.settings.image | img_url:'master' }}">
-  <h2>{{ section.settings.text-box }}</h2>
+  <h2 class="title">{{ section.settings.text-box }}</h2>
   </a>
 </div>
 
