--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -1,4 +1,44 @@
- <svg class="icon icon-cart" aria-hidden="true" focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
+ {% comment %} <svg class="icon icon-cart" aria-hidden="true" focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
   <path fill="currentColor" fill-rule="evenodd" d="M20.5 6.5a4.75 4.75 0 00-4.75 4.75v.56h-3.16l-.77 11.6a5 5 0 004.99 5.34h7.38a5 5 0 004.99-5.33l-.77-11.6h-3.16v-.57A4.75 4.75 0 0020.5 6.5zm3.75 5.31v-.56a3.75 3.75 0 10-7.5 0v.56h7.5zm-7.5 1h7.5v.56a3.75 3.75 0 11-7.5 0v-.56zm-1 0v.56a4.75 4.75 0 109.5 0v-.56h2.22l.71 10.67a4 4 0 01-3.99 4.27h-7.38a4 4 0 01-4-4.27l.72-10.67h2.22z"/>
-</svg> 
+</svg>  {% endcomment %}
+
+<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+class="icon icon-cart"
+aria-hidden="true"
+focusable="false"
+role="presentation"
+viewBox="0 0 40 40" fill="none"
+ preserveAspectRatio="xMidYMid meet">
+<metadata>
+Created by potrace 1.16, written by Peter Selinger 2001-2019
+</metadata>
+<g
+fill="currentColor"
+fill-rule="evenodd"
+>
+<path d="M1625 9285 c-5 -2 -22 -6 -37 -9 -70 -15 -127 -103 -128 -194 0 -93
+56 -182 130 -202 22 -6 398 -10 1001 -10 l965 0 554 -2042 c304 -1124 565
+-2089 580 -2145 l28 -102 -330 -547 c-181 -301 -338 -565 -349 -585 -28 -56
+-25 -125 9 -190 22 -43 38 -59 81 -81 l53 -28 3062 0 c2948 0 3062 1 3101 19
+140 63 155 275 26 366 l-43 30 -2862 5 -2862 5 229 383 230 382 2496 0 c1797
+0 2507 3 2536 11 24 7 57 28 81 53 39 39 47 58 147 361 58 176 309 936 557
+1689 249 753 455 1386 457 1407 12 85 -23 151 -99 190 -88 45 -191 34 -257
+-29 -38 -36 -45 -57 -346 -967 -168 -511 -408 -1237 -532 -1612 l-226 -683
+-2389 0 c-1313 0 -2388 2 -2388 5 0 2 -49 186 -109 407 -61 222 -328 1210
+-595 2196 -268 987 -490 1801 -496 1811 -22 41 -88 89 -139 100 -36 8 -365 11
+-1089 10 -570 0 -1041 -2 -1047 -4z"/>
+<path d="M4920 2913 c-155 -27 -336 -104 -450 -191 -167 -127 -291 -316 -352
+-540 -32 -114 -31 -383 0 -497 44 -158 136 -320 246 -430 264 -264 670 -360
+1023 -243 301 100 544 367 629 693 45 169 38 359 -18 535 -109 342 -411 607
+-762 669 -58 11 -265 13 -316 4z m245 -418 c221 -46 389 -209 446 -433 23 -90
+24 -134 4 -227 -30 -143 -129 -291 -246 -366 -311 -199 -731 -42 -840 314 -28
+89 -23 242 9 331 71 194 232 339 422 380 85 19 120 19 205 1z"/>
+<path d="M9172 2909 c-155 -27 -332 -109 -458 -211 -143 -115 -269 -316 -320
+-513 -36 -138 -39 -346 -6 -478 87 -347 340 -607 691 -708 230 -66 513 -38
+719 72 313 167 521 513 522 867 0 437 -298 830 -722 953 -84 24 -334 35 -426
+18z m321 -426 c186 -54 342 -218 391 -409 47 -182 -12 -391 -148 -526 -193
+-194 -481 -221 -710 -67 -116 78 -199 196 -231 331 -61 261 98 557 354 658
+106 42 231 46 344 13z"/>
+</g>
+</svg>
 
