--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -2,7 +2,9 @@
   <path fill="currentColor" fill-rule="evenodd" d="M20.5 6.5a4.75 4.75 0 00-4.75 4.75v.56h-3.16l-.77 11.6a5 5 0 004.99 5.34h7.38a5 5 0 004.99-5.33l-.77-11.6h-3.16v-.57A4.75 4.75 0 0020.5 6.5zm3.75 5.31v-.56a3.75 3.75 0 10-7.5 0v.56h7.5zm-7.5 1h7.5v.56a3.75 3.75 0 11-7.5 0v-.56zm-1 0v.56a4.75 4.75 0 109.5 0v-.56h2.22l.71 10.67a4 4 0 01-3.99 4.27h-7.38a4 4 0 01-4-4.27l.72-10.67h2.22z"/>
 </svg>  {% endcomment %}
 
-<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+<img src = "https://cdn-icons.flaticon.com/png/512/2838/premium/2838895.png?token=exp=1654496264~hmac=65291c6ecf88dca45cdd77a188e416d9" class = "icon icon-cart"/>
+
+{% comment %} <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
 class="icon icon-cart"
 aria-hidden="true"
 focusable="false"
@@ -41,4 +43,4 @@ fill-rule="evenodd"
 106 42 231 46 344 13z"/>
 </g>
 </svg>
-
+ {% endcomment %}
