--- a/assets/base.css
+++ b/assets/base.css
@@ -2946,12 +2946,25 @@ details-disclosure > details {
 @media screen and (max-width: 750px) {
   .sticky-call-to-action {
     left: 40px;
-    max-width: 100px;
+    max-width: 80px;
+    max-height: 80px;
+    padding: 5px;
+    background: white;
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 10px;
+    border-radius: 10%;
+  }
+
+  .sticky-call-to-action img {
+    height: 5rem;
+  }
+
+  .sticky-call-to-action h2 {
+    font-size: 1rem;
   }
 }
 
 .sticky-call-to-action img {
-  height: 7rem;
+  height: 6rem;
 }
 
 .sticky-call-to-action a {
@@ -2961,5 +2974,5 @@ details-disclosure > details {
 .sticky-call-to-action h2 {
   margin: 0;
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
